--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Sign up{% endblock %}
+
 {% block content %}
   <h2>Sign up</h2>
   <form method="post">
