--- a/templates/products.html
+++ b/templates/products.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h1>Products page</h1>
 
 <ul>
@@ -5,3 +9,4 @@
    <li>{{ product.name }}</li>
   {% endfor %}
 </ul>
+{% endblock %}
