--- a/kitchen/templates/kitchen.html
+++ b/kitchen/templates/kitchen.html
@@ -2,73 +2,84 @@
 
 {% load static %}
 
+{% block title %}
+    Kitchen
+{% endblock %}
+
+{% block metadata %}
+<!-- styl listy rozwijanej przy autouzupełnianiu -->
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">      
+
+<!-- potrzebne, aby autocomplete działał -->
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<style>
+		/* lista scrollowana */
+		.ui-autocomplete {
+    	max-height: 150px;
+    	overflow-y: auto;
+    	overflow-x: hidden;
+  	}
+</style>
+{% endblock %}
 
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>kitchen</title>
-
-		
-
-   
-		<link rel="stylesheet" type="text/css" href = "{% static 'css/style.css' %}"/> 
-	
-	</head>
-	<body>
-
-		<div class="container-fluid" id="wrapper">
+	<div class="container-fluid" id="wrapper">
 			
-			<div class="row">
-				<div class="col-lg-4 col-lg-offset-4" id="content">
-					<h2>Add product to your kitchen</h2>
+	    <div class="row">
+			<div class="col-lg-4 col-lg-offset-4" id="content">
+				<h2>Add product to your kitchen</h2>
 					
-					<form action="{% url 'add' %}" method="POST" role="form">
-						{% csrf_token %}
-						<div class="form-group">
-							<div class="input-group">
-							  {{ form.text }}
-							  <span class="input-group-btn">
-								  <button type="submit" class="btn btn-default" id="add-btn">ADD</button>
-							  </span>
-							</div>
+				<form action="{% url 'add' %}" method="POST" role="form">
+					{% csrf_token %}
+					<div class="form-group">
+						<div class="input-group">
+							{{ form.text }}
+							<span class="input-group-btn">
+								<button type="submit" class="btn btn-default" id="add-btn">ADD</button>
+							</span>
 						</div>
-					</form>
-          <p></p>
-					<div class="row t10">
-						<div class="col-lg-12">
-							<div class="btn-toolbar">
-								<div class="btn-group">
-									<a href="{% url 'deletefinished' %}"><button type="button" class="btn btn-warning">
-										<i class="glyphicon glyphicon-trash"></i> DELETE FINISHED
-									</button></a>
-
+					</div>
+				</form>
+        <p></p>
+			<div class="row t10">
+				<div class="col-lg-12">
+						<div class="btn-toolbar">
+							<div class="btn-group">
+								<a href="{% url 'deletefinished' %}"><button type="button" class="btn btn-warning">
+									<i class="glyphicon glyphicon-trash"></i> DELETE FINISHED
+								</button></a>
                 <p></p>
-								</div>
-								<div class="btn-group">
-									<a href="{% url 'deleteall' %}"><button type="button" class="btn btn-warning">
-										<i class="glyphicon glyphicon-trash"></i> DELETE ALL
-									</button></a>
-								</div>
+							</div>
+							<div class="btn-group">
+								<a href="{% url 'deleteall' %}"><button type="button" class="btn btn-warning">
+									<i class="glyphicon glyphicon-trash"></i> DELETE ALL
+								</button></a>
 							</div>
 						</div>
 					</div>
-          <p></p>
-					<ul class="list-group t20">
-            <h2> Products in your kitchen: </h2> 
-            <p> To mark finished product - click on product </p>
-						{% for product in kitchen_list %}
-							{% if product.finished %}
-							<li class="list-group-item product-finished"><s>{{ product.text }}</s></li>
-							{% else %}
-							<a href="{% url 'finished' product.id %}"><li class="list-group-item">{{ product.text }}</li></a>
-							{% endif %}
-						{% endfor %}
-					</ul>
 				</div>
+        <p></p>
+				<ul class="list-group t20">
+        <h2> Products in your kitchen: </h2> 
+        <p> To mark finished product - click on product </p>
+					{% for product in kitchen_list %}
+						{% if product.finished %}
+						    <li class="list-group-item product-finished"><s>{{ product.text }}</s></li>
+						{% else %}
+							<a href="{% url 'finished' product.id %}"><li class="list-group-item">{{ product.text }}</li></a>
+						{% endif %}
+					{% endfor %}
+				</ul>
 			</div>
+		</div>
+
+<script type="text/javascript">
+    $( function() {
+        $(".form-control").autocomplete({
+        source: '{% url 'autocomplete_kitchen' %}',
+        });
+    });
+</script>
 
 {% endblock %}
