--- a/shopping/templates/shopping.html
+++ b/shopping/templates/shopping.html
@@ -2,67 +2,78 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}
+    Shopping list
+{% endblock %}
+
+{% block metadata %}
+<!-- styl listy rozwijanej przy autouzupełnianiu -->
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
+<!-- potrzebne, aby autocomplete działał -->
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<style>
+		/* lista scrollowana */
+		.ui-autocomplete {
+    	max-height: 150px;
+    	overflow-y: auto;
+    	overflow-x: hidden;
+  	}
+</style>
+
+{% endblock %}
 
 {% block content %}
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>shopping_list</title>
-
-		
-
-   
-		<link rel="stylesheet" type="text/css" href = "{% static 'css/style.css' %}"/> 
-	
-	</head>
-	<body>
-
-		<div class="container-fluid" id="wrapper">
+	<div class="container-fluid" id="wrapper">
 			
-			<div class="row">
-				<div class="col-lg-4 col-lg-offset-4" id="content">
-					<h2>Add product to your shopping list</h2>
+		<div class="row">
+			<div class="col-lg-4 col-lg-offset-4" id="content">
+				<h2>Add product to your shopping list</h2>
 					
-					<form action="{% url 'add_to_buy' %}" method="POST" role="form">
-						{% csrf_token %}
-						<div class="form-group">
-							<div class="input-group">
-							  {{ form.text }}
-							  <span class="input-group-btn">
-								  <button type="submit" class="btn btn-default" id="add-btn">ADD</button>
-							  </span>
-							</div>
+				<form action="{% url 'add_to_buy' %}" method="POST" role="form">
+					{% csrf_token %}
+					<div class="form-group">
+						<div class="input-group">
+							{{ form.text }}
+							<span class="input-group-btn">
+								<button type="submit" class="btn btn-default" id="add-btn">ADD</button>
+							</span>
 						</div>
-					</form>
-          <p></p>
-          <div class="row t10">
-						<div class="col-lg-12">
-							<div class="btn-toolbar">
+					</div>
+				</form>
+        <p></p>
+        <div class="row t10">
+					<div class="col-lg-12">
+						<div class="btn-toolbar">
 								
-								<div class="btn-group">
-									<a href="{% url 'done' %}"><button type="button" class="btn btn-warning">
-										<i class="glyphicon glyphicon-trash"></i> DONE
-									</button></a>
-								</div>
+							<div class="btn-group">
+								<a href="{% url 'done' %}"><button type="button" class="btn btn-warning">
+									<i class="glyphicon glyphicon-trash"></i> DONE
+								</button></a>
 							</div>
 						</div>
 					</div>
-          <p></p>
-					<ul class="list-group t20">
-            
-						{% for tobuy in shopping_list %}
-							
-							<p>{{ tobuy.text }}</p>
-							
-						{% endfor %}
-					</ul>
 				</div>
+         <p></p>
+				<ul class="list-group t20">
+            
+					{% for tobuy in shopping_list %}
+							
+						<p>{{ tobuy.text }}</p>
+							
+					{% endfor %}
+				</ul>
 			</div>
+		</div>
+
+<script type="text/javascript">
+    $( function() {
+        $(".form-control").autocomplete({
+        source: '{% url 'autocomplete_shopping_list' %}',
+        });
+    });
+</script>
 
 {% endblock %}
