--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,11 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %}Project kitchen{% endblock %}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" type="text/css" href = "{% static 'css/style.css' %}"/> 
+  {% block metadata %}
+  {% endblock %}
   <style>
   .center {
     margin: auto;
