--- a/templates/products.html
+++ b/templates/products.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 
+<div style = "position: absolute; top: 20px; left: 30px; border: 2px solid pink"> 
+  <form action="{% url 'home' %}" >
+    <span class="input-group-btn">
+      <button type="submit" class="btn btn-default" id="add-btn">HOME</button>
+    </span>  
+  </form>
+</div>
+
 <h1>Products page</h1>
 
 <ul>
