--- a/kitchen/templates/kitchen.html
+++ b/kitchen/templates/kitchen.html
@@ -24,8 +24,15 @@
 {% endblock %}
 
 {% block content %}
+  
 	<div class="container-fluid" id="wrapper">
-			
+      <div style = "position: absolute; top: 20px; left: 30px; border: 2px solid pink"> 
+          <form action="{% url 'home' %}" >
+            <span class="input-group-btn">
+              <button type="submit" class="btn btn-default" id="add-btn">HOME</button>
+            </span>  
+          </form>
+      </div>
 	    <div class="row">
 			<div class="col-lg-4 col-lg-offset-4" id="content">
 				<h2>Add product to your kitchen</h2>
@@ -34,7 +41,7 @@
 					{% csrf_token %}
 					<div class="form-group">
 						<div class="input-group">
-							{{ form.text }}
+							{{ form.text }} {{ form.amount }}
 							<span class="input-group-btn">
 								<button type="submit" class="btn btn-default" id="add-btn">ADD</button>
 							</span>
@@ -42,35 +49,54 @@
 					</div>
 				</form>
         <p></p>
-			<div class="row t10">
-				<div class="col-lg-12">
-						<div class="btn-toolbar">
-							<div class="btn-group">
-								<a href="{% url 'deletefinished' %}"><button type="button" class="btn btn-warning">
-									<i class="glyphicon glyphicon-trash"></i> DELETE FINISHED
-								</button></a>
-                <p></p>
-							</div>
-							<div class="btn-group">
-								<a href="{% url 'deleteall' %}"><button type="button" class="btn btn-warning">
-									<i class="glyphicon glyphicon-trash"></i> DELETE ALL
-								</button></a>
-							</div>
-						</div>
+
 					</div>
 				</div>
         <p></p>
 				<ul class="list-group t20">
         <h2> Products in your kitchen: </h2> 
-        <p> To mark finished product - click on product </p>
+        <p> To mark product, that have run out  - click on product </p>
 					{% for product in kitchen_list %}
 						{% if product.finished %}
-						    <li class="list-group-item product-finished"><s>{{ product.text }}</s></li>
+						    <li class="list-group-item product-finished"><s>{{ product.text }}</s> - {{ product.amount }} </li>
+                
 						{% else %}
-							<a href="{% url 'finished' product.id %}"><li class="list-group-item">{{ product.text }}</li></a>
+							
+              <form action="{% url 'change_amount' product.id %}" method="POST" role="form">
+                {% csrf_token %}
+                <div class="form-group">
+                  <div class="input-group">
+                    <a href="{% url 'finished' product.id %}"><li class="list-group-item" >{{ product.text }} </a> - {{ product.amount }} 
+                      &nbsp&nbsp&nbsp{{ form.amount }}
+                    <span class="input-group-btn">
+                      <button type="submit" class="btn btn-default" id="add-btn">CHANGE</button>
+                    </span>
+                  </div>
+                </div>
+              </form>    
+                         
 						{% endif %}
 					{% endfor %}
 				</ul>
+    
+      <div class="row t10">
+				<div class="col-lg-12">
+					<div class="btn-toolbar">
+						<div class="btn-group">
+              <div style = "position: absolute; bottom: 60px; right: 150px; border: 4px solid pink"> 
+								<a href="{% url 'deletefinished' %}"><button type="button" class="btn btn-warning">
+                <i class="glyphicon glyphicon-trash"></i> DELETE MARKED</button></a>
+              </div>
+                <p></p>
+							
+							<div class="btn-group">
+                <div style = "position: absolute; bottom: 20px; right: 150px; border: 4px solid pink"> 
+								  <a href="{% url 'deleteall' %}"><button type="button" class="btn btn-warning">
+									<i class="glyphicon glyphicon-trash"></i> DELETE ALL</button></a>
+                </div>
+							</div>
+						</div>
+          </div>
 			</div>
 		</div>
 
