--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -3,7 +3,13 @@
 {% block content %}
 <h1>Recipes page</h1>
 
-
+<div style = "position: absolute; top: 20px; left: 30px; border: 2px solid pink"> 
+  <form action="{% url 'home' %}" >
+    <span class="input-group-btn">
+      <button type="submit" class="btn btn-default" id="add-btn">HOME</button>
+    </span>  
+  </form>
+</div>
 
 <ul>
   {% for recipe in data %}
