--- a/shopping/templates/shopping.html
+++ b/shopping/templates/shopping.html
@@ -26,14 +26,15 @@
 {% endblock %}
 
 {% block content %}
-	<div class="container-fluid" id="wrapper">
-    <div style = "position: absolute; top: 20px; left: 30px; border: 2px solid pink"> 
-      <form action="{% url 'home' %}" >
-        <span class="input-group-btn">
-          <button type="submit" class="btn btn-default" id="add-btn">HOME</button>
-        </span>  
-      </form>
-    </div>			
+	<!--
+<div style = "position: absolute; top: 20px; left: 30px; border: 2px solid pink"> 
+  <form action="{% url 'home' %}" >
+    <span class="input-group-btn">
+      <button type="submit" class="btn btn-default" id="add-btn">HOME</button>
+    </span>  
+  </form>
+</div>
+-->		
 		<div class="row">
 			<div class="col-lg-4 col-lg-offset-4" id="content">
 				<h2>Add product to your shopping list</h2>
@@ -80,7 +81,7 @@
 
 <script type="text/javascript">
     $( function() {
-        $(".form-control").autocomplete({
+        $(".form-autocomplete").autocomplete({
         source: '{% url 'autocomplete_shopping_list' %}',
         });
     });
