--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,17 @@
   <main>
     <div class="center">
       <img src="{% static 'images/czapka.png' %}" alt="hat" style="width:128px;height:128px;">
+
+    {% block home_button %}
+        <div style = "position: absolute; top: 20px; left: 30px;      border: 2px solid pink"> 
+        <form action="{% url 'home' %}" >
+            <span class="input-group-btn">
+            <button type="submit" class="btn btn-default" id="add-btn">HOME</button>
+            </span>  
+        </form>
+        </div>
+    {% endblock %}
+
       {% block content %}
       {% endblock %}
     </div>
