--- a/recipes/templates/recipes.html
+++ b/recipes/templates/recipes.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    Recipes page
+{% endblock %}
+
+
 {% block content %}
 <h1>Recipes page</h1>
 
@@ -15,15 +20,16 @@
 
 <ul>
   {% for recipe in data %}
-   <li><h2>{{ recipe.title }}</h2>
-   {% for item in recipe.elements %}
+   <li><a href='{% url "recipe" recipe.id%}'>
+        <h2>{{ recipe.title }}</h2></a>
+   <!--{% for item in recipe.elements %}
     <li>
       {{ item.quantity }}
       {{ item.unit }}
       {{ item.ingredient }}
     </li>
    {% endfor %}
-   <p>{{ recipe.directions }}</p>
+   <p>{{ recipe.directions }}</p>-->
    </li>
   {% endfor %}
 </ul>
