shopping list with relations created

--- a/shopping/templates/shopping.html
+++ b/shopping/templates/shopping.html
@@ -80,9 +80,8 @@
             
 				{% for tobuy in shopping_list %}
 						
-					<p>{{ tobuy.text }} - {{ tobuy.amount }}</p>	
+					<p>{{ tobuy }} - {{ tobuy.quantity }}</p>	
 
-					
 				{% endfor %}
 			</ul>
 	
