--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
 
     <meta charset="utf-8">
-    <title>{% block title %}Project kitchen{% endblock %}</title>
+    <title>Project kitchen | {% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href = "{% static 'css/sb-admin-2.css' %}"/> 
@@ -32,6 +32,8 @@
         width: 100%;
         padding: 15px;
       }
+    {% block style %}
+    {% endblock%}
     </style>
   
 
