--- a/shopping/templates/shopping.html
+++ b/shopping/templates/shopping.html
@@ -63,7 +63,7 @@
 	<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
 		<ul class="list-group t20">
             {% for tobuy in shopping_list %}
-				<p>{{ tobuy.text }} - {{ tobuy.amount }}</p>	
+				<p>{{ tobuy }} - {{ tobuy.quantity }}</p>	
 			{% endfor %}
 		</ul>
 	</div>
