--- a/recipes/templates/recipe.html
+++ b/recipes/templates/recipe.html
@@ -16,7 +16,9 @@
 .star-btn {
 	background-color: inherit !important;
 	border: 0 !important;
+	padding: 0px;
 }
+
 {% endblock %}
 
 {% block content %}
