--- a/shopping/templates/shopping.html
+++ b/shopping/templates/shopping.html
@@ -1,5 +1,5 @@
-
 {% extends 'base.html' %}
+
 {% load static %}
 
 {% block title %}
@@ -13,7 +13,6 @@
 <!-- potrzebne, aby autocomplete działał -->
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
 <style>
 		/* lista scrollowana */
 		.ui-autocomplete {
@@ -22,71 +21,58 @@
     	overflow-x: hidden;
   	}
 </style>
-
 {% endblock %}
 
 {% block content %}
-
 	<div class="row">
-	<div class="col-lg-4 col-lg-offset-4" id="content">
 	<div class="card border-left-primary shadow h-100 py-2">
 	<div class="card-body">
 	<div class="row no-gutters align-items-center">
-	<div class="col mr-2">
-		<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-			<h2>Add product to shopping list</h2>
-			<form action="{% url 'add_to_buy' %}" method="POST" role="form">
-				{% csrf_token %}
-				<div class="form-group">
-				<div class="input-group">
-					{{ form.text }} {{ form.amount }}
-					<span class="input-group-btn">
-						<button type="submit" class="btn btn-default" id="add-btn">ADD</button>
-					</span>
-				</div>
-				</div>
-			</form>
-		</div>	
-	</div>
-	</div>
-	</div>
-	</div>
-	</div>
-
-	<p></p>
-
-	<div class="col-lg-4 col-lg-offset-4" id="content">
-	<div class="card border-left-primary shadow h-100 py-2">
-	<div class="card-body">
-	<div class="row no-gutters align-items-center">
-	<div class="col mr-2">
 	<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-		<ul class="list-group t20">
+		<h2>Add product to shopping list</h2>
+		<form action="{% url 'add_to_buy' %}" method="POST" role="form">
+			{% csrf_token %}
+			<div class="form-group">
+			<div class="input-group">
+				{{ form.text }} {{ form.amount }}
+				<span class="input-group-btn">
+					<button type="submit" class="btn btn-default" id="add-btn">ADD</button>
+				</span>
+			</div>
+			</div>
+		</form>
+	</div>	
+	</div>
+	</div>
+	</div>
+	</div>
+	<p></p>
+	<div class="row">
+	<div class="card border-left-primary shadow h-100 py-2">
+	<div class="card-body">
+	<div class="row no-gutters align-items-center">
+	<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
             {% for tobuy in shopping_list %}
 				<p>{{ tobuy }} - {{ tobuy.quantity }}</p>	
 			{% endfor %}
-		</ul>
 	</div>
 	</div>
 	</div>
 	</div>
-	</div>
-	<p></p>			
-	</div>
-	
-	<div class="col-lg-12">
-	<div class="btn-toolbar">
-	<div class="btn-group">
-	<div style = "position: absolute; ">
-		<p></p>
-		<a href="{% url 'done' %}">
-			<button type="button" class="btn btn-warning">
-				<i class="glyphicon glyphicon-trash"></i> DONE
-			</button>
-		</a>
-	</div>
-	</div>
-	</div>
+	</div>		
+	<div class="row">
+		<div class="btn-toolbar">
+			<div class="btn-group">
+				<div style = "position: static; ">
+					<p></p>
+					<a href="{% url 'done' %}">
+						<button type="button" class="btn btn-warning">
+							<i class="glyphicon glyphicon-trash"></i> DONE
+						</button>
+					</a>
+				</div>
+			</div>
+		</div>
 	</div>
 	
 <script type="text/javascript">
