--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-
     <!-- Custom fonts for this template-->
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
     <link
@@ -33,19 +32,18 @@
         padding: 15px;
       }
     {% block style %}
-    {% endblock%}
+    {% endblock %}
     </style>
-  
 
 </head>
 
-<body id="page-top">
+<body id="page-top" style="background-color:#f8f9fc; padding-left: 220px; padding-top: 20px;">
 
     <!-- Page Wrapper -->
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+        <ul class="navbar-nav fixed-bottom bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'home' %}">
@@ -56,11 +54,8 @@
                 <div class="sidebar-brand-text mx-3">Kitchen </div>
             </a>
 
-
             <!-- Divider -->
             <hr class="sidebar-divider">
-
-
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
@@ -75,36 +70,24 @@
                       </li>
 
                     {% else %}
-                      
-                      <h1>
-                     
-                      </h1>
+
                       <a class="nav-link" href="{% url 'login' %}"><span>Log In</span></a>
                       <a class="nav-link" href="{% url 'signup' %}"><span>Sign Up</span></a>
                       
-                    {% endif %}
-                        
-                   
-                
-            </li>
-
-          
+                    {% endif %}    
+            </li>          
         </ul>
-
         <!-- End of Sidebar -->
         
         <!-- Content Wrapper -->
-        
-        <div id="content-wrapper" class="d-flex flex-column">
+        <div id="content-wrapper" class="d-flex flex-column overflow-auto">
 
           <!-- Main Content -->
           <div id="content">
             
               <div class="container-fluid">
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                  
-                    <div class="center">
-                      
+                    <div class="center ">
                       {% block content %}
                       {% endblock %}
                   </div>
@@ -118,7 +101,6 @@
             <i class="fas fa-angle-up"></i>
         </a>
 
- 
         <!-- Bootstrap core JavaScript-->
         <script src="vendor/jquery/jquery.min.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -135,7 +117,6 @@
         <!-- Page level custom scripts -->
         <script src="js/demo/chart-area-demo.js"></script>
         <script src="js/demo/chart-pie-demo.js"></script>
-  
     
 </body>
 
