--- a/kitchen/templates/kitchen.html
+++ b/kitchen/templates/kitchen.html
@@ -28,7 +28,7 @@
 	<div class="card-body">
 	<div class="row no-gutters align-items-center">
 	<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-		<h2>Add product to kitchen</h2>
+		<h2>Add product</h2>
 		<form action="{% url 'add' %}" method="POST" role="form">
 			{% csrf_token %}
 			<div class="form-group">
